--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                         <td>
                             <div class="cont_img">
-                                <div class="cont_img1">1b64c8b16848b7b70738f35_dasfsgdhfj.png
+                                <div class="cont_img1">
                                     <img src="./img/61b3c0584188363be05a4f32_Icon awesome-telegram.png" alt="">
                                 </div>
                             </div>
